--- a/css/style.css
+++ b/css/style.css
@@ -459,6 +459,9 @@ body {
   z-index: -1;
   opacity: .95;
   overflow: hidden; }
+  @media (max-width: 37.5em) {
+    .bg-video {
+      display: none; } }
   .bg-video__content {
     height: 100%;
     width: 100%;
@@ -630,6 +633,10 @@ body {
       width: 100%;
       filter: grayscale(100%);
       transition: 2s; }
+      @media (max-width: 37.5em) {
+        .team__member--1 {
+          height: 85%;
+          width: 85%; } }
       .team__member--1:hover {
         filter: grayscale(0%);
         transform: scale(1.1); }
@@ -748,41 +755,6 @@ figure {
     grid-column-end: 9;
     grid-row-start: 6;
     grid-row-end: 9; }
-  .gallery__item--7 {
-    grid-column-start: 1;
-    grid-column-end: 5;
-    grid-row-start: 1;
-    grid-row-end: 9; }
-  .gallery__item--8 {
-    grid-column-start: 5;
-    grid-column-end: 9;
-    grid-row-start: 6;
-    grid-row-end: 9; }
-  .gallery__item--9 {
-    grid-column-start: 5;
-    grid-column-end: 9;
-    grid-row-start: 1;
-    grid-row-end: 6; }
-  .gallery__item--10 {
-    grid-column-start: 5;
-    grid-column-end: 7;
-    grid-row-start: -1;
-    grid-row-end: 3; }
-  .gallery__item--11 {
-    grid-column-start: 7;
-    grid-column-end: 9;
-    grid-row-start: 4;
-    grid-row-end: 9; }
-  .gallery__item--12 {
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 9; }
-  .gallery__item--13 {
-    grid-column-start: 3;
-    grid-column-end: 5;
-    grid-row-start: 2;
-    grid-row-end: 9; }
   .gallery__img {
     width: 100%;
     height: 100%;
@@ -831,7 +803,7 @@ figure {
   transition: opacity 0.6s; }
 
 .btn-close {
-  font-size: 3.2rem;
+  font-size: 6.2rem;
   display: block;
   margin: 0 auto;
   max-width: 20rem;
@@ -849,11 +821,10 @@ figure {
   background-size: cover;
   background-position: top;
   position: relative; }
-  @media (max-width: 56.25em) {
+  @media (max-width: 37.5em) {
     .header {
       width: 100%;
-      -webkit-clip-path: polygon(100% 0%, 100% 0%, 100% 0, 100% 100%, 100% 100%, 100% 100%, 0 100%, 0 0);
-      clip-path: polygon(100% 0%, 100% 0%, 100% 0, 100% 100%, 100% 100%, 100% 100%, 0 100%, 0 0); } }
+      background-image: linear-gradient(to right bottom, rgba(109, 22, 94, 0.7), rgba(43, 22, 109, 0.7)), url(../img/header-1.jpg); } }
   .header__logo-box {
     position: absolute;
     top: 6rem;
@@ -1032,4 +1003,62 @@ figure {
       clip-path: polygon(100% 0%, 100% 0%, 100% 0, 100% 100%, 100% 100%, 100% 100%, 0 100%, 0 0); } }
 
 .section-gallery {
-  background-image: linear-gradient(to right bottom, rgba(109, 22, 94, 0.2), rgba(43, 22, 109, 0.2)); }
+  background-image: linear-gradient(to right bottom, rgba(109, 22, 94, 0.5), rgba(43, 22, 109, 0.5));
+  clip-path: polygon(50% 0%, 100% 5%, 100% 100%, 50% 95%, 0 100%, 0 5%);
+  padding: 10rem 0; }
+
+#loader {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 1;
+  width: 15px;
+  height: 15px;
+  margin: -75px 0 0 -75px;
+  border: 4px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 4px solid black;
+  width: 80px;
+  height: 80px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite; }
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg); }
+  100% {
+    -webkit-transform: rotate(360deg); } }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(360deg); } }
+
+/* Add animation to "page content" */
+.animate-bottom {
+  position: relative;
+  -webkit-animation-name: animatebottom;
+  -webkit-animation-duration: 1s;
+  animation-name: animatebottom;
+  animation-duration: 1s; }
+
+@-webkit-keyframes animatebottom {
+  from {
+    bottom: -100px;
+    opacity: 0; }
+  to {
+    bottom: 0px;
+    opacity: 1; } }
+
+@keyframes animatebottom {
+  from {
+    bottom: -100px;
+    opacity: 0; }
+  to {
+    bottom: 0;
+    opacity: 1; } }
+
+#myDiv {
+  display: none;
+  text-align: center; }
