--- a/sass/components/bg-video.scss
+++ b/sass/components/bg-video.scss
@@ -8,6 +8,10 @@
     opacity: .95;
     overflow: hidden;
 
+    @include respond(phone) {
+        display: none;
+     }
+
     &__content {
         height: 100%;
         width: 100%;
