--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -64,37 +64,56 @@
 .section-gallery {
     background-image: linear-gradient(
         to right bottom,
-        rgba($color-primary, 0.2),
-        rgba($color-primary-dark, 0.2));
+        rgba($color-primary, 0.5),
+        rgba($color-primary-dark, 0.5));
+        clip-path: polygon(50% 0%, 100% 5%, 100% 100%, 50% 95%, 0 100%, 0 5%);
+        padding: 10rem 0;
 }
-// .section-about-us {
-//     padding: 10rem 0;
-//     background-image: linear-gradient(
-//         to right bottom,
-//         rgba($color-primary-light, 0.8),
-//         rgba($color-primary-dark, 0.8));
-//     transform: skewY(-7deg);
-//     margin-top: 2rem;
 
-//     @include respond(tab-land) {
-//     transform: skewY(0deg);
-//     }
 
-    
-//     & > * {
-//         transform: skewY(7deg);
-
-//         @include respond(tab-land) {
-//         transform: skewY(0deg);
-//         }
-//     }
-
-// }
-// .section-our-team {
-//     padding: 10rem 0;
-//     background-image: linear-gradient(
-//         to right bottom,
-//         rgba($color-primary-light, 0.8),
-//         rgba($color-primary-dark, 0.8));
-//     margin-top: 0rem;
-// }
+#loader {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: 1;
+    width: 15px;
+    height: 15px;
+   
+    margin: -75px 0 0 -75px;
+    border: 4px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 4px solid black;
+    width: 80px;
+    height: 80px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+  }
+  @-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+   
+  }
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  /* Add animation to "page content" */
+  .animate-bottom {
+    position: relative;
+    -webkit-animation-name: animatebottom;
+    -webkit-animation-duration: 1s;
+    animation-name: animatebottom;
+    animation-duration: 1s
+  }
+  @-webkit-keyframes animatebottom {
+    from { bottom:-100px; opacity:0 }
+    to { bottom:0px; opacity:1 }
+  }
+  @keyframes animatebottom {
+    from{ bottom:-100px; opacity:0 }
+    to{ bottom:0; opacity:1 }
+  }
+  #myDiv {
+    display: none;
+    text-align: center;
+  }
