--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -25,7 +25,7 @@ figure {
 .gallery {
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(8, 5vw);
-    grid-gap: 1.5rem;
+    grid-gap: 2rem;
     width: 100%;
     padding-top: 6rem;
 
@@ -77,11 +77,16 @@ figure {
         object-fit: cover;
         transition: .4s linear;
 
-        &:hover {
-            opacity: 1;
-            transition: .4s linear;
-            transform: scale(1.2);
-        }
+        // &:hover {
+        //     opacity: 1;
+        //     transition: .4s linear;
+        //     transform: scale(1.2);
+
+        //     @include respond(tab-land) {
+        //         transition: none;
+        //         transform: none;
+        //     }
+        // }
     }
     
     &__item {
