--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -35,6 +35,7 @@ Grey dark 3: #999
     --color-yellow-dark: #C6A40E;
     --color-blue-light: rgb(155, 255, 255);
     --color-blue-dark: rgb(0, 81, 255);
+    --color-button:rgb(154, 231, 218);
 
 }
 
